@@ -1,0 +1,8 @@
+{START_FORM}
+<p class="padded">{FG_USERNAME_LABEL}<br />
+{FG_USERNAME}</p>
+<p class="padded">{FG_EMAIL_LABEL}<br />
+{FG_EMAIL}</p>
+
+<p class="padded">{SUBMIT}</p>
+{END_FORM}
